--- a/src/main/resources/org/example/styles/default.css
+++ b/src/main/resources/org/example/styles/default.css
@@ -20,7 +20,7 @@ Button:hover {
 }
 
 .action-button {
-    -fx-background-color: #2d7c5f;
+    -fx-background-color: #9A8262;
     -fx-text-fill: white;
     -fx-border-radius: 3px;
 }
@@ -28,7 +28,7 @@ Button:hover {
 .action-button:hover {
     -fx-background-color: white;
     -fx-border-width: 1px;
-    -fx-border-color: #2d7c5f;
+    -fx-border-color: #9A8262;
     -fx-text-fill: black;
 }
 
